# cpp-file-handling-tutorial

./: .gitignore  CMakeLists.txt  LICENSE  README.md
AppendingFile/: CMakeLists.txt  main.cpp
BinaryFile/: CMakeLists.txt  main.cpp  student.cpp  student.hpp
FileRW/: CMakeLists.txt  main.cpp
ReadingFile/: CMakeLists.txt  main.cpp
WritingFile/: CMakeLists.txt  main.cpp
